<resources>
    <string name="app_name">DoIt</string>
    <string name="add">Add</string>
    <string name="todo_hint">Todo</string>
    <string name="deadline">Deadline</string>
    <string name="time_interval">Interval</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="set_interval">Set</string>
    <string name="create">Create</string>
    <string name="update">Update</string>
    <string name="start_time">Start Time</string>
    <string name="start_time_button_text">Start Time</string>
    <string name="create_todo">Create new Todo</string>
    <string name="set_deadline">Set Deadline</string>
    <string name="categories">Categories</string>
    <string name="add_category">Add category</string>
    <string name="create_category">create_category</string>
    <string name="close_category">Close category</string>
    <string name="category">Category</string>
    <string name="todo_on">To-do on: %s</string>
    <string name="day_month_year">%2d-%2d-%4d</string>
    <string name="hour_min">%2d:%2d %s</string>
    <string name="invalid_date">Invalid date!</string>
    <string name="invalid_time">Invalid time!</string>
    <string name="finished_todos">Finished todos</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="category_plus_count">%s (%d)</string>
    <string name="all">All</string>
    <string name="categories_selection">categories selection</string>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>
    <string name="finished">Finished</string>
    <string name="todos">Todos</string>
    <string name="clear">clear</string>
    <string name="deadline_string">Deadline: %s at %s</string>
    <string name="date_time_string">%s at %s</string>
    <string name="finished_date_string">Finished: %s at %s</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="select_all">select all</string>
    <string name="empty_todo">empty todo</string>
    <string name="done_all">Done all</string>
    <string name="add_new_category">add new category</string>
    <string name="todo_count">Todos: %d</string>
    <string name="finished_todo_count">Finished: %d</string>
    <string name="set_as_default">set as default</string>
    <string name="default_header">Default</string>
    <string name="others_header">Others</string>
    <string name="name">Name</string>
    <string name="todo_count_header">Todo: </string>
    <string name="finished_todo_count_header">Finished: </string>
    <string name="summary">Summary</string>
    <string name="share">Share</string>
    <string name="remind_me">Remind me: %s</string>
    <string name="today">Today</string>
    <string name="now">Now</string>
    <string name="reset">Reset</string>
    <string name="notification_deadline_title">Deadline (%s)</string>
    <string name="notification_todo_title">Todo (%s)</string>
    <string name="version_code">Version 1.0</string>
    <string name="copyright_text">Copyright &#169; Te6lim 2021. All rights reserved</string>
    <string name="private_policy_text"><a href=''>Private Policy</a></string>
</resources>