<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/nav_menu_group"
        android:checkableBehavior="single">

        <item
            android:id="@+id/todos_navView"
            android:icon="@drawable/ic_todo"
            android:title="@string/todos" />

        <item
            android:id="@+id/finished_todos_navView"
            android:icon="@drawable/ic_finished_todos"
            android:title="@string/finished_todos" />

        <item
            android:id="@+id/summary_navView"
            android:icon="@drawable/ic_summary"
            android:title="@string/summary" />
    </group>

    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_share"
        android:title="@string/share" />

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />

    <item
        android:icon="@drawable/ic_about"
        android:title="@string/about" />
</menu>