<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/edit"
        android:title="@string/edit"
        android:icon="@drawable/ic_edit"
        app:showAsAction="always" />

    <item
        android:id="@+id/done_all"
        android:icon="@drawable/ic_done_all"
        android:title="@string/done_all"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/select_all"
        android:icon="@drawable/ic_select_all"
        android:title="@string/select_all"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/delete"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete"
        app:showAsAction="ifRoom" />
</menu>